--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        repository: nobuyuki83/demos_glutin
+        path: demos_glutin
 
     - name: Checkout dependent repos
       uses: actions/checkout@v3
@@ -34,6 +37,7 @@ jobs:
         default: true
 
     - name: Cargo commands
+      working-directory: demos_glutin
       run: |
         pwd
         ls -al
